mopidy (0.16.0-0mopidy2) UNRELEASED; urgency=low

  * Update copyright format URL.
  * Add python-setuptools to Build-Depends.
  * Bump debhelper to >= 8.0.0.
  * Convert from python-support to dh_python2.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 28 Oct 2013 21:47:52 +0100

mopidy (0.16.0-0mopidy1) unstable; urgency=low

  * New upstream release.
  * Use https in watch URL.
  * Update copyright year.
  * Refer to copy of Apache 2.0 license in /usr/share/common-licenses.
  * Remove dependency on python-spotify, python-pylast, python-dbus, and
    python-indicate as the extensions requiring them are no longer included in
    the main Mopidy project.
  * Update package descriptions.
  * Add *.egg-info/* to debian/clean.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 28 Oct 2013 11:20:51 +0100

mopidy (0.15.0-0mopidy1) unstable; urgency=low

  * New upstream release.
  * Removed Python 2.6 support.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Thu, 19 Sep 2013 19:33:50 +0200

mopidy (0.14.2-0mopidy1) unstable; urgency=low

  * New upstream release.
  * Update version range on python-spotify dependency to include >= 1.9, << 2.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 01 Jul 2013 11:54:20 +0200

mopidy (0.14.1-0mopidy2) unstable; urgency=low

  * Update version range on python-spotify dependency to include 1.11.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Mon, 01 Jul 2013 01:31:47 +0200

mopidy (0.14.1-0mopidy1) unstable; urgency=low

  * New upstream release.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Sun, 28 Apr 2013 23:46:25 +0200

mopidy (0.14.0-0mopidy1) unstable; urgency=low

  * New upstream release.
  * Add dependency on python-setuptools.
  * Remove suggests on python-serial, as external mixers support have been
    moved to an extension.
  * Update path to changelog.
  * Bump Standards-Version to 3.9.4.

 -- Stein Magnus Jodal <stein.magnus@jodal.no>  Sun, 28 Apr 2013 22:43:41 +0200
