@@ -10,6 +10,14 @@ override_dh_clean:
 	make -C docs/ clean
 	dh_clean
 
+override_dh_auto_build:
+
+override_dh_auto_install:
+	python setup.py install --root=debian/tmp --install-layout=deb --install-lib=/usr/share/mopidy --install-scripts=/usr/share/mopidy/bin
+	mv debian/tmp/usr/share/mopidy/bin/mopidy debian/tmp/usr/share/mopidy/mopidy-serve
+	mv debian/tmp/usr/share/mopidy/bin/* debian/tmp/usr/share/mopidy/
+	rm -r debian/tmp/usr/share/mopidy/bin/
+
 override_dh_installchangelogs:
 	dh_installchangelogs docs/changelog.rst
 
